##***************************************************************************** 
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************
SUBDIRS = lib util etc
